small format changes to titles of text

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://scirrincione.github.io/firstlineortho",
+  "homepage": "https://scirrincione.github.io/FirstLineOrtho",
   "private": true,
   "version": "0.0.0",
   "type": "module",
